syntax = "proto3";
package tubitid.badge;

enum Department {
    NONE = 0;
    BTBS = 1;
    IBY = 2;
    GIB = 3;
    UT  = 4;
    BSB = 5;
}

message StudentMetaData {
    uint32 no = 1;
    Department department = 2;
    uint32 grade = 3;
}

message FacebookMetaData {
    string facebookID = 1;
}

message Badge {
    uint32 id = 1;
    string name = 2;
    uint64 expires = 3;
    oneof metadata {
        StudentMetaData student = 4;
        FacebookMetaData facebook = 5;
    }
}

message SignedBadge {
    bytes signature = 1;
    Badge badge = 2;
}
